<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/clock"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clock" />

    <TextView
        android:id="@+id/lunch_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/lunch"
        app:layout_constraintBottom_toTopOf="@+id/lunch"
        app:layout_constraintEnd_toEndOf="@+id/lunch"
        app:layout_constraintStart_toStartOf="@+id/lunch" />

    <TextView
        android:id="@+id/lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/lunch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sec" />

    <TextView
        android:id="@+id/dinner_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dinner"
        app:layout_constraintBottom_toTopOf="@+id/dinner"
        app:layout_constraintEnd_toEndOf="@+id/dinner"
        app:layout_constraintStart_toStartOf="@+id/dinner" />

    <TextView
        android:id="@+id/dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/dinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lunch" />

    <TextView
        android:id="@+id/air_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/air_status"
        app:layout_constraintBottom_toTopOf="@+id/pm10_hint"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pm10_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/pm10"
        app:layout_constraintBottom_toTopOf="@+id/pm25_hint"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pm25_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/pm25"
        app:layout_constraintBottom_toTopOf="@+id/comp_hint"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/comp_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/comp"
        app:layout_constraintBottom_toTopOf="@+id/clock"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pm10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/pm10"
        app:layout_constraintStart_toEndOf="@+id/pm25_hint"
        app:layout_constraintTop_toTopOf="@+id/pm10_hint" />

    <TextView
        android:id="@+id/pm25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/pm25"
        app:layout_constraintStart_toEndOf="@+id/pm25_hint"
        app:layout_constraintTop_toTopOf="@+id/pm25_hint" />

    <TextView
        android:id="@+id/comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/comp"
        app:layout_constraintStart_toEndOf="@+id/pm25_hint"
        app:layout_constraintTop_toTopOf="@+id/comp_hint" />

    <TextView
        android:id="@+id/weather_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/weather"
        app:layout_constraintBottom_toTopOf="@+id/weather_icon"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/air_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/weather"
        app:layout_constraintBottom_toBottomOf="@+id/weather_icon"
        app:layout_constraintStart_toEndOf="@+id/weather_icon"
        app:layout_constraintTop_toTopOf="@+id/weather_icon" />

    <TextView
        android:id="@+id/schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/schedule"
        app:layout_constraintBottom_toTopOf="@+id/news"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/news"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>